# appl-rgb-segmentation

./: .gitignore  README.md  config.py  eval.ipynb  models.py  preprocessing.ipynb  pyproject.toml  requirements.txt  train.py
models/: __init__.py  vit.py
modules/: __init__.py  funcs_dataloader.py  funcs_losses.py  funcs_metrics.py  funcs_preprocessing.py
outputs/logs/: log_model-resnet101_tile-224.csv  log_model-resnet101_tile-448.csv  log_model-resnet152_tile-224.csv  log_model-resnet152_tile-448.csv  log_model-resnet34_tile-224.csv  log_model-resnet34_tile-448.csv  log_model-resnet50_tile-224.csv  log_model-resnet50_tile-448.csv  log_model-vit_base_patch16_224_tile-224.csv  log_model-vit_base_patch16_224_tile-448.csv  log_model-vit_base_patch8_224_tile-224.csv  log_model-vit_base_patch8_224_tile-448.csv  log_model-vit_small_patch16_224_tile-224.csv  log_model-vit_small_patch16_224_tile-448.csv  log_model-vit_small_patch8_224_tile-224.csv  log_model-vit_small_patch8_224_tile-448.csv
scripts/preprocessing/: build_metadata.py  process_images.py  process_masks.py  split_data.py
training/: __init__.py  resnet34_224.py  resnet34_448.py  train-unet.py  train-vit.py  train.py  trainer.py  vit_small_p8_224.py  vit_small_p8_448.py
