[project]
name = "appl-rgb-segmentation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
